fixed html in page descrition causing to break the head html

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ padding: 4ex;
 /* Header
 ———————————————————————————————————— */
 header {
-  flex: 0 250px;
+  flex: 0 400px;
   min-height: 100%;
   background: #39f;
 }
